Colaboratory를 통해 생성됨

--- a/chapter02_mathematical-building-blocks.ipynb
+++ b/chapter02_mathematical-building-blocks.ipynb
@@ -15,6 +15,50 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## Practice"
+      ],
+      "metadata": {
+        "id": "vKkDCBomh7oW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "1+1"
+      ],
+      "metadata": {
+        "id": "KKF7oDkth0PO",
+        "outputId": "2f05cee6-0c77-4519-a8e3-99a47fa0e35c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "text"
+      ],
+      "metadata": {
+        "id": "8_iNvIxLh4v0"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "epruNZ2ne_7G"
       },
